--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,6 +1,7 @@
 ---
 galaxy_info:
   role_name: elastic-apm-server
+  namespace: boutetnico
   author: Nicolas Boutet
   description: Install and configure Elastic APM server.
   license: MIT
