--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,6 +1,6 @@
 ---
 galaxy_info:
-  role_name: elastic-apm-server
+  role_name: elastic_apm_server
   namespace: boutetnico
   author: Nicolas Boutet
   description: Install and configure Elastic APM server.
