Update Ubuntu for testing + fix molecule lint issues

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,5 +1,5 @@
 ---
-- name: restart APM server
-  service:
+- name: Restart APM server
+  ansible.builtin.service:
     name: apm-server
     state: restarted
