--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -32,7 +32,7 @@
   ansible.builtin.template:
     dest: /etc/apm-server/apm-server.yml
     group: apm-server
-    mode: 0600
+    mode: "0600"
     owner: apm-server
     src: apm-server.yml.j2
   notify:
