--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,6 +34,13 @@ jobs:
           ansible --version
           molecule --version
 
+      - name: Lint code
+        run: |
+          ansible-lint
+          black --check .
+        env:
+          PY_COLORS: "1"
+
       - name: Run Molecule
         run: molecule test
         env:
